[gd_scene load_steps=12 format=3 uid="uid://3e542tiw1h3i"]

[ext_resource type="Script" path="res://Scripts/level_1.gd" id="1_d3sb6"]
[ext_resource type="PackedScene" uid="uid://chwdvm8ujw2d5" path="res://Cenas/player_1_level.tscn" id="1_rcf75"]
[ext_resource type="Texture2D" uid="uid://buj6pubairxp8" path="res://Assets/Brick.png" id="2_2ks55"]
[ext_resource type="PackedScene" uid="uid://y3dmd6d3wdwb" path="res://Cenas/player_2_level.tscn" id="2_ew0c6"]
[ext_resource type="PackedScene" uid="uid://b7lyloobwy3eu" path="res://Cenas/poison.tscn" id="3_co6y8"]
[ext_resource type="PackedScene" uid="uid://b1s1xbd6tkteg" path="res://Scripts/coin.tscn" id="6_nr2ex"]
[ext_resource type="PackedScene" uid="uid://dswnvcoflll8f" path="res://Cenas/button.tscn" id="7_qpitk"]
[ext_resource type="PackedScene" uid="uid://bfsg6kssa0egr" path="res://Cenas/door.tscn" id="8_o7xg6"]
[ext_resource type="PackedScene" uid="uid://b8f48nt3t5aeq" path="res://Cenas/ui.tscn" id="9_sasl6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t2gu2"]
texture = ExtResource("2_2ks55")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_emuvx"]
physics_layer_0/collision_layer = 2
sources/1 = SubResource("TileSetAtlasSource_t2gu2")

[node name="Level1" type="Node"]
script = ExtResource("1_d3sb6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("6_nr2ex")]
position = Vector2(-211, 2)

[node name="Coin2" parent="Coins" instance=ExtResource("6_nr2ex")]
position = Vector2(215, 3)

[node name="Poisons" type="Node" parent="."]

[node name="Poison1" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(-254, -67)

[node name="Poison2" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(84, -67)

[node name="Poison3" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(36, 30)

[node name="Poison4" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(-230, 30)

[node name="Poison5" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(-298, 143)

[node name="Poison6" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(99, 142)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_emuvx")
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(655340, 1, 0, 589804, 1, 0, 524268, 1, 0, 458732, 1, 0, 393196, 1, 0, 262124, 1, 0, 196588, 1, 0, 131052, 1, 0, 65516, 1, 0, -20, 1, 0, -65556, 1, 0, 655341, 1, 0, 655342, 1, 0, 655343, 1, 0, 655344, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 1, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655357, 1, 0, 655356, 1, 0, 655355, 1, 0, 655354, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589843, 1, 0, 524307, 1, 0, 458771, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 393235, 1, 0, 327699, 1, 0, 262163, 1, 0, 196627, 1, 0, 131091, 1, 0, 65555, 1, 0, 19, 1, 0, -65517, 1, 0, -131053, 1, 0, -196589, 1, 0, -262125, 1, 0, -327661, 1, 0, -393197, 1, 0, -458733, 1, 0, -524269, 1, 0, -589825, 1, 0, -589826, 1, 0, -589827, 1, 0, -589828, 1, 0, -589829, 1, 0, -589830, 1, 0, -589831, 1, 0, -589832, 1, 0, -589833, 1, 0, -589834, 1, 0, -589835, 1, 0, -589836, 1, 0, -589837, 1, 0, -589838, 1, 0, -589839, 1, 0, -589840, 1, 0, -589841, 1, 0, -589842, 1, 0, -589844, 1, 0, -524308, 1, 0, -458772, 1, 0, -262164, 1, 0, -196628, 1, 0, -131092, 1, 0, -393236, 1, 0, -327700, 1, 0, -589843, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -655355, 1, 0, -655353, 1, 0, -655354, 1, 0, -655352, 1, 0, -655351, 1, 0, -655350, 1, 0, -655349, 1, 0, -655348, 1, 0, -655347, 1, 0, -655346, 1, 0, -655345, 1, 0, -655344, 1, 0, -655343, 1, 0, -655342, 1, 0, -655341, 1, 0, -589805, 1, 0, -524289, 1, 0, -458753, 1, 0, -393217, 1, 0, -327681, 1, 0, -262145, 1, 0, -327680, 1, 0, -393216, 1, 0, -458752, 1, 0, -524288, 1, 0, -589824, 1, 0, -196609, 1, 0, -262144, 1, 0, 327660, 1, 0, 589823, 1, 0, 524288, 1, 0, 589805, 1, 0, 589806, 1, 0, 589807, 1, 0, 589808, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524299, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, -196627, 1, 0, -196626, 1, 0, -196625, 1, 0, -196624, 1, 0, -196623, 1, 0, -196616, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -262128, 1, 0, -262127, 1, 0, -262126, 1, 0, 131071, 1, 0, 131073, 1, 0, 131072, 1, 0, 196607, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 196606, 1, 0, 196605, 1, 0, 196604, 1, 0, 196603, 1, 0, 196602, 1, 0, 196601, 1, 0, 196600, 1, 0, 196594, 1, 0, 196593, 1, 0, 131070, 1, 0, 589814, 1, 0, 589815, 1, 0, 589816, 1, 0, -196615, 1, 0, -196614, 1, 0, -262138, 1, 0, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 1, 0, -262134, 1, 0, -262133, 1, 0, -262132, 1, 0, -327677, 1, 0, -262141, 1, 0, -262140, 1, 0, -327676, 1, 0, -262139, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 589812, 1, 0, 589813, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 131086, 1, 0, 65550, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 65535, 1, 0, 0, 1, 0, 65536, 1, 0, 196595, 1, 0, 196596, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 131060, 1, 0, 131059, 1, 0, 131058, 1, 0, 131057, 1, 0, -196613, 1, 0, -262149, 1, 0, -262148, 1, 0, -196612, 1, 0, -196622, 1, 0, -196621, 1, 0, -196620, 1, 0, -196619, 1, 0, -196618, 1, 0, -262154, 1, 0, -262155, 1, 0, -262153, 1, 0, -196617, 1, 0, -262160, 1, 0, -262161, 1, 0, -262159, 1, 0, -262162, 1, 0, -262163, 1, 0)

[node name="Door" parent="." instance=ExtResource("8_o7xg6")]
position = Vector2(-283, -97)

[node name="Button1" parent="." instance=ExtResource("7_qpitk")]
position = Vector2(-126, 126)

[node name="Button2" parent="." instance=ExtResource("7_qpitk")]
position = Vector2(137, 126)

[node name="Players" type="Node" parent="."]

[node name="Player 1 - Level" parent="Players" instance=ExtResource("1_rcf75")]
position = Vector2(-187, 1)
collision_mask = 6

[node name="Player 2 - Level" parent="Players" instance=ExtResource("2_ew0c6")]
position = Vector2(258, 118)

[node name="UI" parent="." instance=ExtResource("9_sasl6")]

[connection signal="body_entered" from="Button1" to="." method="_on_button_1_body_entered"]
[connection signal="body_entered" from="Button2" to="." method="_on_button_2_body_entered"]
